add teach_table & api documentation
